force-app/main/default/staticresources/python/Disappear/src/objects/Snapshot_Pub_Author__c.object
<CustomObject>
    <description>Object to hold the snapshot of the Publication Authors to maintain a trail of the changes across various Submission and FPR Cycles.</description>
    <fields>
        <fullName>Additional_Details_For_Approval__c</fullName>
        <label>Additional Details (For Approval)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_For_Draft_Share__c</fullName>
        <label>Additional Details (For Draft Share)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_For_Invite__c</fullName>
        <label>Additional Details (For Invite)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Accepted_Date__c</fullName>
        <label>Approval Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Disclaimer_ID__c</fullName>
        <label>Approval Disclaimer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Rejected_Date__c</fullName>
        <label>Approval Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Sent_Date__c</fullName>
        <label>Approval Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Author_Status__c</fullName>
        <label>Author Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Invite Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Invite Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite Cancelled	Not Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Review by Authors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Author Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Author Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommentReceivedDate__c</fullName>
        <description>Stores the author comment received date</description>
        <label>CommentReceivedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Draft_Share_Date__c</fullName>
        <label>Draft Share Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPR Cycle</label>
        <referenceTo>FPR_Cycle__c</referenceTo>
        <relationshipLabel>Snapshot Pub Authors</relationshipLabel>
        <relationshipName>Snapshot_Pub_Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invite_Accepted_Date__c</fullName>
        <label>Invite Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invite_Disclaimer_ID__c</fullName>
        <label>Invite Disclaimer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_Rejected_Date__c</fullName>
        <label>Invite Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invite_Sent_Date__c</fullName>
        <label>Invite Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Justification_for_Approval__c</fullName>
        <label>Justification for Approval/Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Email Confirmation of Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Response from Author’s Delegate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Justification_for_Invite__c</fullName>
        <label>Justification for Invite</label>
        <picklist>
            <picklistValues>
                <fullName>Email Confirmation of Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from Author</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>On_behalf_of_for_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On behalf of (for Approval)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Snapshot_Pub_Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_behalf_of_for_Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On behalf of (for Invite)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Snapshot_Pub_Authors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_respond_by_For_Draft_Share__c</fullName>
        <label>Please respond by (For Draft Share)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Publication_Author__c</fullName>
        <label>Publication Author</label>
        <referenceTo>pubAuthor__c</referenceTo>
        <relationshipLabel>Snapshot Pub Authors</relationshipLabel>
        <relationshipName>Snapshot_Pub_Authors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <picklist>
            <picklistValues>
                <fullName>Conception and design of Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient data collection/Data acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis and interpretation of data</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_to_Decline_Approval__c</fullName>
        <label>Reason to Decline Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission Cycle</label>
        <referenceTo>SubmissionCycle__c</referenceTo>
        <relationshipLabel>Snapshot Pub Authors</relationshipLabel>
        <relationshipName>Snapshot_Pub_Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures the modification in isLogicallyDeleted__c field of cObject Publication Author</description>
        <label>isLogicallyDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Snapshot Pub Author</label>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>Snapshot Pub Author Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Pub Authors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>